# macrovan

./: .gitignore  README.md  VBM_precincts.pkl  VBM_turfs.pkl  __init__.py  emails.txt  entries.txt  find_duplicates.py  install_poetry_custom.ps1  logfile.txt  normal_precincts.pkl  pyproject.toml  refresh_binaries.ps1  requirements.txt  setup_environment.bat  setup_environment.sh  test_poetry_setup.py
.github/workflows/: build-executables-v2.yml  build-executables.yml  mac-build.yml
app/: MailInVoterPrints.py  PrintingSteps.py  README_voter_data_automation.md  VAN_routines.py  VAN_utils.py  __init__.py  auth.py  auto_delete_pdfs.py  create_precincts.py  download_voter_data.py  emailSend.py  email_body.txt  email_body_fancy.txt  full_run.py  macrovan 01.py  macrovan_config.json  macrovat.py  mail_in_voter_prints.py  mail_in_voter_prints01.py  mail_in_voter_prints_01.py  map_region_manager.py  organizer_folders.py  precinct_sheet_update.py  print_VBM_targets.py  printingGUI.py  printing_steps.py  printing_steps_01.py  read_pdf.py  requirements.txt  run_voter_data_automation.py  search_terms.py  secrets_template.py  teardown.py  test.py  test_installation.py  test_popup.py  test_snippet.py  turf_sheet_update.py  update_search_terms.py  update_sheet.py  (+7 more)
app/old/: email_body.txt  macrovan 01.py  mail_in_voter_prints.py  printingGUI.py  read_pdf.py  teardown.py
app/tests/: test_integration.py  test_live_delete.py  test_live_upload.py  test_van_file_manager.py  test_van_search_list_manager.py  test_voter_data_automation.py  test_voter_data_downloader.py
io/inputs/: macrovan_config.json
io/logs/: .gitignore
