[tool.poetry]
name = "macrovan"
version = "0.1.0"
description = "Automation scripts for VoteBuilder"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "3.141.0"
requests = "2.24.0"
pandas = "1.3.5"
PyPDF2 = "2.12.1"
webdriver-manager = "3.2.1"
pytest = "7.0.1"
pytest-mock = "3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
macrovan = "app.run_voter_data_automation:main"
test-install = "app.test_installation:main"
test-poetry = "test_poetry_setup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
