[tool.poetry]
name = "macrovan"
version = "0.1.0"
description = "Macrovan automation tools for voter data management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^2.0.0"
numpy = "^1.24.0"
selenium = "^4.10.0"
requests = "^2.31.0"
PyPDF2 = "^3.0.0"
openpyxl = "^3.1.0"
python-dotenv = "^1.0.0"
webdriver-manager = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
macrovan = "app.macrovan:main"
test-poetry = "app.test_poetry_setup:main"
voter-data = "app.voter_data_automation:main"
vbm-targets = "app.print_VBM_targets:main"
