[tool.poetry]
name = "macrovan"
version = "0.1.0"
description = "Macrovan automation tools for voter data management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
# This allows Poetry to find modules in both the root and the app folder
packages = [{include = "app"}, {include = "test_poetry_setup.py"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.0"
numpy = "1.24.0"
selenium = "^4.10.0"
requests = "^2.31.0"
pypdf = "^6.5.0"
openpyxl = "^3.1.0"
python-dotenv = "^1.0.0"
webdriver-manager = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Testing
test-poetry = "test_poetry_setup:main"

# VoteBuilder Automations
vat = "app.macrovat:main"
print-lists = "app.print_VBM_targets:main"
mail-prints = "app.mail_in_voter_prints:main"